--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "ejs": "^2.6.1",
         "engine": "^0.1.12",
         "express": "^4.16.3",
+        "express-session": "^1.15.6",
         "method-override": "^2.3.10",
         "mongoose": "^5.1.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^5.0.0",
         "view": "^1.1.1"
     },
     "devDependencies": {
