--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^5.0.0",
+        "cheerio": "^0.19.0",
+        "url-parse": "^1.0.5",
+        "request": "^2.65.0",
         "view": "^1.1.1"
     },
     "devDependencies": {
